syntax = "proto3";
package user;

option go_package = "./proto/gen;gen";

import "google/protobuf/empty.proto";

service UserService {
  // Auth
  rpc Register(RegisterRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // User management
  rpc GetUserProfile(UserIDRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(UserIDRequest) returns (google.protobuf.Empty);
}

// Messages for Auth
message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Messages for User management
message UserIDRequest {
  string user_id = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string email = 2;
  string role = 3;
}

// Common responses
message UserResponse {
  string id = 1;
  string email = 2;
  string role = 3;
}
